--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "compass-mixins": "^0.12.10",
+    "infinite-react-carousel": "^1.2.11",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.5.1",
+    "react-awesome-slider": "^4.1.0",
+    "react-compass": "^0.1.0",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.20",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
